--- a/_includes/navigation-menu.html
+++ b/_includes/navigation-menu.html
@@ -1,3 +1,13 @@
+<!-- Closures -->
+<li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Closures <b class="caret"></b></a>
+  <ul class="dropdown-menu">
+    <li><a href="closures/closures.html">Closures</a></li>
+    <li><a href="closures/richstream.html">Rich Stream</a></li>
+    <li><a href="closures/lists.html">List</a></li>
+  </ul>
+</li>
+
 <!--
                 MENU Example
                 <li class="active"><a href="#">Home</a></li>
